Bug #33590: prevent ProgressBar from jumping when text length changes

--- a/management/univention-web/css/site/widgets.styl
+++ b/management/univention-web/css/site/widgets.styl
@@ -76,6 +76,19 @@
 	> *
 		width: 100%
 
+.umc .umcProgressBar
+	overflow: visible
+
+	.umcProgressBarComponent
+		height: 40px
+		overflow: visible
+		display: flex
+		align-items: flex-end
+
+	.umcProgressBarMessage
+		height: 40px
+		overflow: visible
+
 .umc .umcSearchBox
 	.umcSearchIcon
 		margin: 0 material-grid(3, true) 0 0
